--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE HTML>
     <head>
         <title>Jake's Eatery</title>
+        <!-- Reset CSS -->
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <!-- Bootstrap stylesheet -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <!-- Real CSS -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+        </head>
     <body>
+
       <!-- Nav HTML -->
        <div class="logo"></div>
        <div class="nav">
@@ -21,7 +27,7 @@
            </div>
        </div>
        <!-- Column Layout -->
-       <div class="column">
+       <main class="column">
            <div class="meal1">
                <div class="text">
                    <h1>Porterhouse Steak</h1>
@@ -40,7 +46,7 @@
                         <p>Porterhouse features a flavorful strip and filet tenderloin together. Seasoned with our special blend of herbs and spices then seared.</p>
                     </div>
            </div>
-       </div>
+        </main>
        <!-- Footer HTML -->
        <div class="footer">
             <a href="#" class="fb">Facebook</a>
